part one of porting