@@ -28,6 +28,7 @@ import de.bluecolored.bluemap.api.debug.DebugDump;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @SuppressWarnings({"FieldMayBeFinal", "FieldCanBeLocal"})
 @DebugDump
@@ -40,7 +41,7 @@ public class CoreConfig {
 
     private boolean metrics = true;
 
-    private Path data = Path.of("bluemap");
+    private Path data = Paths.get("bluemap");
 
     private boolean scanForModResources = true;
 
