@@ -28,6 +28,7 @@ import de.bluecolored.bluemap.api.debug.DebugDump;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
@@ -40,7 +41,7 @@ public class WebappConfig {
     private boolean enabled = true;
     private boolean updateSettingsFile = true;
 
-    private Path webroot = Path.of("bluemap", "web");
+    private Path webroot = Paths.get("bluemap", "web");
 
     private boolean useCookies = true;
 
