@@ -30,13 +30,14 @@ import de.bluecolored.bluemap.core.storage.file.FileStorageSettings;
 import org.spongepowered.configurate.objectmapping.ConfigSerializable;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @SuppressWarnings("FieldMayBeFinal")
 @DebugDump
 @ConfigSerializable
 public class FileConfig extends StorageConfig implements FileStorageSettings {
 
-    private Path root = Path.of("bluemap", "web", "maps");
+    private Path root = Paths.get("bluemap", "web", "maps");
 
     private Compression compression = Compression.GZIP;
 
